# LoFTP

./: .env.production.example  .gitignore  LICENSE  README.md  TRADEMARKS.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
codex-plugin/loftp-codex-connector/: .mcp.json  README.md
docs/: codex-connector.md  dialogs-redesign.html  icon-design.html  updater-cloudflare.md
docs/wiki/: AI-Codex-and-VS-Code.md  Codex-Connector.md  FAQ.md  Features-Overview.md  Getting-Started.md  Home.md  Licensing-and-Project-Support.md
mockups/: index.html
release/: latest.example.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  archive.rs  bunny_storage.rs  codex.rs  filesystem.rs  ftp.rs  hosting.rs  license.rs  mod.rs  purchase.rs  search.rs  sftp.rs  ui.rs  updater.rs  viewer.rs
src-tauri/src/models/: file_item.rs  hosting.rs  license.rs  mod.rs  transfer.rs
src-tauri/src/services/: bunny_storage_client.rs  config_store.rs  credential_store.rs  ftp_client.rs  license_client.rs  mod.rs  sftp_client.rs
src/content/: legal.ts
src/data/: mockFiles.ts
src/hooks/: useConnection.ts  useDirectoryCompare.ts  useFileActions.ts  useFileSelection.ts  useHostingWorkspace.ts  useHostings.ts  useKeyboardShortcuts.ts  useLicense.tsx  useLocalFiles.ts  useRemoteFiles.ts  useTheme.ts  useTransferOrchestration.ts  useTransfers.ts  useUpdater.ts
src/i18n/: index.tsx  messages.ts
(+38 files in other folders)
