[package]
name = "loftp"
version = "1.0.0"
description = "FTP/SFTP client for macOS"
authors = ["LoFTP"]
edition = "2021"

[lib]
name = "loftp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
suppaftp = { version = "6", features = ["native-tls"] }
ssh2 = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native"] }
thiserror = "2"
log = "0.4"
hostname = "0.4"
hex = "0.4"
base64 = "0.22"
glob-match = "0.2"
walkdir = "2"
zip = "2"
flate2 = "1"
tar = "0.4"
libc = "0.2"
tauri-plugin-dialog = "2.6.0"
shellexpand = "3"
native-tls = "0.2"
